Fix inconsistent background colors in dark mode
Fixes #89

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,6 +74,11 @@ body {
     color: var(--convrtr-base-color);
     position: relative;
 }
+@include color-mode(dark) {
+    body {
+        background-color: #2e3236 !important;
+    }
+}
 .page-wrap {
     grid-column-start: 2;
     position: relative;
@@ -531,7 +536,7 @@ body {
 @include color-mode(dark) {
     .section:nth-of-type(even) {
         --bs-bg-opacity: 1;
-        background-color: rgb(46 50 54) !important;
+        background-color: #2e3236 !important;
     }
     .section:nth-of-type(odd) {
         --bs-bg-opacity: 1;
